web-infras/parser/tests/fixtures/self-added/await-in-async-context/await-as-arrow-param-rhs/module-parent-not-current-not/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,11)
2|    (valu=await) => {
 |         ^
